@@ -1012,7 +1012,7 @@ osfEndLine:	<Key>End\n
 ! `R7' and `R13' are generated by the developer's SUNs for `Home' and `End'
 Ddd*gdb_w.translations: #override\n\
 <Btn3Down>:		gdb-popup-menu()            \n\
-Ctrl<Key>A:		gdb-beginning-of-line()	    \n\
+Ctrl<Key>A:		select-all()	    	    \n\
 Ctrl<Key>B:		gdb-isearch-prev()    	    \n\
 Ctrl<Key>C:		gdb-control(^C)		    \n\
 Ctrl<Key>D:		gdb-delete-or-control(^D)   \n\
@@ -1060,7 +1060,7 @@ None<Key>Tab:		gdb-complete-command()	    \n
 
 dnl Basic translations for all other texts and text fields
 define(EMACS_TRANSLATIONS,[\
-Ctrl<Key>A:		beginning-of-line()	    \n\
+Ctrl<Key>A:		select-all()	    	    \n\
 Ctrl<Key>B:		gdb-backward-character()    \n\
 Ctrl<Key>C:		gdb-control(^C)		    \n\
 Ctrl<Key>D:		delete-next-character()     \n\
@@ -1184,7 +1184,7 @@ define(SOURCE_TRANSLATIONS,[\
 <Btn3Down>:		source-popup-menu() \n\
 ~Ctrl ~Shift<Btn1Down>:	source-start-select-word()  \n\
 ~Ctrl ~Shift<Btn1Up>:	source-end-select-word()    \n\
-Ctrl<Key>A:		beginning-of-line()	    \n\
+Ctrl<Key>A:		select-all()	    	    \n\
 Ctrl<Key>B:		gdb-isearch-prev()    	    \n\
 Ctrl<Key>C:             gdb-control(^C)             \n\
 Ctrl<Key>E:		end-of-line()		    \n\
@@ -1961,13 +1961,9 @@ Ddd*editMenu.delete.documentationString: \
 
 Ddd*editMenu.selectAll.labelString:			Select All
 Ddd*editMenu.selectAll.mnemonic:			A
+Ddd*editMenu.selectAll.acceleratorText:			Ctrl+A
 Ddd*editMenu.selectAll.documentationString: \
 @rm Select all items
-
-Ddd*editMenu.unselectAll.labelString:			Unselect All
-Ddd*editMenu.unselectAll.mnemonic:			U
-Ddd*editMenu.unselectAll.documentationString: \
-@rm Unselect all items
 
 Ddd*editMenu.preferences.labelString:			Preferences...
 Ddd*editMenu.preferences.mnemonic:			r
@@ -2157,15 +2153,15 @@ Ddd*menubar*programMenu.run.documentationString: \
 
 Ddd*menubar*programMenu.run_again.labelString:	   Run Again
 Ddd*menubar*programMenu.run_again.mnemonic:	   A
-Ddd*menubar*programMenu.run_again.accelerator:	   ~Shift Ctrl<Key>A
-Ddd*menubar*programMenu.run_again.acceleratorText: Ctrl+A
+Ddd*menubar*programMenu.run_again.accelerator:	   Shift Ctrl<Key>E
+Ddd*menubar*programMenu.run_again.acceleratorText: Shift+Ctrl+E
 Ddd*menubar*programMenu.run_again.documentationString: \
 @rm Restart debugged program, using the previous arguments.
 
 Ddd*menubar*programMenu.separateExecWindow.labelString:	Run in Execution Window
-Ddd*menubar*programMenu.separateExecWindow.mnemonic:	x
-Ddd*menubar*programMenu*separateExecWindow.accelerator:	~Shift Meta<Key>X
-Ddd*menubar*programMenu*separateExecWindow.acceleratorText: Alt+X
+Ddd*menubar*programMenu.separateExecWindow.mnemonic:	E
+Ddd*menubar*programMenu*separateExecWindow.accelerator:	~Shift Meta<Key>E
+Ddd*menubar*programMenu*separateExecWindow.acceleratorText: Alt+E
 Ddd*menubar*programMenu.separateExecWindow.documentationString:\
 @rm Toggle execution of debugged program in separate window
 
@@ -2188,7 +2184,7 @@ Ddd*menubar*programMenu.next.acceleratorText:	   Ctrl+J
 Ddd*menubar*programMenu.next.documentationString:
 
 Ddd*menubar*programMenu.nexti.labelString:	   Next Instruction
-Ddd*menubar*programMenu.nexti.mnemonic:		   e
+Ddd*menubar*programMenu.nexti.mnemonic:		   x
 Ddd*menubar*programMenu.nexti.accelerator:	   Shift Ctrl<Key>J
 Ddd*menubar*programMenu.nexti.acceleratorText:	   Shift+Ctrl+J
 Ddd*menubar*programMenu.nexti.documentationString:
@@ -2648,8 +2644,8 @@ Ddd*dataMenu.layout.documentationString:	\
 
 Ddd*dataMenu.selectAll.labelString:	Select All
 Ddd*dataMenu.selectAll.mnemonic:	S
-Ddd*dataMenu.selectAll.accelerator:	Meta<Key>Z
-Ddd*dataMenu.selectAll.acceleratorText:	Alt+Z
+! Ddd*dataMenu.selectAll.accelerator:	Ctrl<Key>A
+Ddd*dataMenu.selectAll.acceleratorText:	Ctrl+A
 Ddd*dataMenu.selectAll.documentationString:	\
 @rm Select all displays
 
